# Pockament-Client

./: .eslintrc.json  package.json  tsconfig.json
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: button.tsx  footer.tsx  header.tsx  mainpage.tsx  menucard.tsx  pagepath.tsx  setbutton.tsx  sidemenu.tsx  status.tsx  title.tsx
src/style/: _color.variable.scss  global.scss
src/style/components/: app.module.scss  button.module.scss  header.module.scss  mainpage.module.scss  pagepath.module.scss  status.module.scss
